frontend projects/To-do-list/To-do-list.css
* {
    overflow-x: hidden;
    font-size: 20px;




}

h1 {
    font-size: 38px;
    margin: 25px 0;
    font-weight: 600;
    color: black;
    font-family: cursive;
    text-decoration: underline 2px;
    margin-top: 30px;



}




body {

    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background-image: linear-gradient(to right, coral, #fbd786, #c6ffdd);




}

.main-content {
    width: 470px;
    height: 30px;
    padding: 20px;
    background-color: coral;
    border-radius: 15px;
    border: 2px solid black;
    overflow-y: hidden;

}

.main-list {
    display: grid;
    gap: 15px;
    grid-template-columns: 3fr 1fr;


}

.typed-list {
    border: 2px solid black;
    border-radius: 6px;
    padding: 4px;
    font-size: 20px;
    font-family: Georgia, 'Times New Roman', Times, serif;

}

.to-add-button {
    background-color: teal;
    color: white;
    font-size: 18px;
    border-radius: 6px;
    border: 2px solid black;
}

.to-add-button:hover {
    background-color: brown;
    cursor: pointer
}


.task-list {
    width: 462px;
    height: 30px;
    padding: 20px;
    margin-top: 15px;
    background-color: coral;
    border-radius: 15px;
    border: 2px solid black;

}

#heading {
    margin-top: 24px;
    text-decoration: underline 2px;
}

.tasks {
    display: flex;
    gap: 13px;
    grid-template-columns: 3fr 1fr 1fr;
    height: 30px;
}

.typed-text {
    border: 2px solid black;
    border-radius: 6px;
    padding: 4px;
    font-size: 20px;
    width: 340px;

    font-family: Georgia, 'Times New Roman', Times, serif;


}

.done {
    background-color: teal;
    color: white;
    font-size: 16px;
    border-radius: 6px;
    width: 70px;
    height: 30px;


}

.done:hover {
    background-color: rgb(51, 201, 51);
    cursor: pointer
}

.del {
    background-color: teal;
    color: white;
    font-size: 16px;
    border-radius: 6px;
    width: 80px;
    height: 30px;

}

.del:hover {
    background-color: red;
    cursor: pointer;
}

.visibility {
    display: none;
}

.completed-task-heading {
    text-align: center;
    text-decoration: underline;
    margin-top: 15px;
}


.task-lists {
    width: 470px;
    height: 30px;
    padding: 20px;
    background-color: coral;
    border-radius: 15px;
    border: 2px solid black;
    margin-top: 15px;

}

.items {
    display: grid;
    gap: 15px;
    grid-template-columns: 3fr 1fr;




}

.typed-task-after {
    border: 2px solid black;
    border-radius: 6px;
    padding: 4px;
    font-size: 16px;
    font-family: Georgia, 'Times New Roman', Times, serif;
}

.del-after {
    background-color: red;
    color: white;
    font-size: 18px;
    border-radius: 6px;
    border: 2px solid black;
}

.del-after:hover {
    background-color: rgb(169, 17, 17);

    cursor: pointer;
}

@media(max-width: 145px) {
    .main-content {
        width: 65px;
        height: 20px;
    }


    .task-list {
        width: 65px;
        height: 20px;
    }

    .task-lists {
        width: 65px;
        height: 20px;
    }

    .done {
        font-size: 8px;
    }

    .del {
        font-size: 8px;
    }

    .del-after {
        font-size: 8px;
    }

    .to-add-button {
        font-size: 8px;
    }

    h1 {
        font-size: 13px;
    }

    .typed-list {
        font-size: 14px;


    }

    .typed-text {
        font-size: 10px;
    }

    .to-add-button {
        text-align: left;
    }

    .typed-task-after {
        border-radius: 4px;
        height: 15px;
        font-size: 12px;

    }
}

@media(min-width: 145px) and (max-width: 218px) {

    .main-content {
        width: 85px;
        height: 20px;
    }


    .task-list {
        width: 85px;
        height: 20px;
    }

    .task-lists {
        width: 85px;
        height: 20px;
    }

    .done {
        font-size: 8px;
    }

    .del {
        font-size: 8px;
    }

    .del-after {
        font-size: 8px;
    }

    .to-add-button {
        font-size: 8px;
    }

    h1 {
        font-size: 16px;
    }

    .typed-list {
        font-size: 14px;


    }

    .typed-text {
        font-size: 10px;
    }

    .to-add-button {
        text-align: left;
    }

    .typed-task-after {
        border-radius: 4px;
        height: 15px;
        font-size: 12px;

    }
}

@media(min-width: 218px)and (max-width: 311px) {
    .main-content {
        width: 160px;
        height: 20px;
    }


    .task-list {
        width: 160px;
        height: 20px;
    }

    .task-lists {
        width: 160px;
        height: 20px;
    }

    .done {
        font-size: 8px;
    }

    .del {
        font-size: 8px;
    }

    .del-after {
        font-size: 8px;
    }

    .to-add-button {
        font-size: 8px;
    }

    h1 {
        font-size: 25px;
    }

    .typed-list {
        font-size: 14px;


    }

    .typed-text {
        font-size: 10px;
    }

    .to-add-button {
        text-align: left;
    }

    .typed-task-after {
        border-radius: 4px;
        height: 15px;
        font-size: 12px;

    }
}

@media(min-width: 218px)and (max-width: 311px) {
    .main-content {
        width: 160px;
        height: 20px;
    }

    .task-list {
        width: 160px;
        height: 30px;
    }

    .task-lists {
        width: 160px;
        height: 30px;
    }

    .done {
        font-size: 7px;
        text-align: left;
        height: 26.5px;
    }

    .del {
        font-size: 7px;
        text-align: left;
        height: 26.5px;
    }

    .del-after {
        font-size: 8px;
    }

    .to-add-button {
        font-size: 8px;
    }

    h1 {
        font-size: 25px;
    }

    .typed-list {
        font-size: 8px;
        height: 14px;

    }

    .typed-text {
        height: 14px;
    }

    .to-add-button {
        text-align: left;
    }

    .typed-task-after {
        border-radius: 4px;
        height: 20px;
        font-size: 12px;
    }

}

@media(min-width:311px) and (max-width:370px) {
    .main-content {
        width: 250px;
        height: 30px;
    }

    .task-list {
        width: 250px;
        height: 30px;
    }

    .task-lists {
        width: 250px;
        height: 30px;
    }

    .done {
        font-size: 9px;
    }

    .del {
        font-size: 9px;
    }

    .del-after {
        font-size: 9px;
    }

    .to-add-button {
        font-size: 9px;
    }

    .typed-list {
        font-size: 10px;
    }
}

@media(min-width: 370px) and (max-width: 491px) {
    .main-content {
        width: 300px;
        height: 30px;
    }

    .task-list {
        width: 300px;
        height: 30px;
    }

    .task-lists {
        width: 300px;
        height: 30px;
    }

    .done {
        font-size: 12px;
    }

    .del {
        font-size: 12px;
    }

    .del-after {
        font-size: 9px;
    }

    .to-add-button {
        font-size: 14px;
    }

    .typed-list {
        font-size: 13px;
    }
}

@media(min-width: 491px) and (max-width:550px) {
    .main-content {
        width: 380px;
        height: 30px;
    }

    .task-list {
        width: 380px;
        height: 30px;
    }

    .task-lists {
        width: 380px;
        height: 30px;
    }

    .typed-list {
        font-size: 15px;
    }


}

